Menu, sin control de perfiles.

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,9 @@
-<p>
-  menu works!
-</p>
+<div class="sidebar">
+  <p-panelMenu [model]="items"></p-panelMenu>
+
+
+</div>
+
+<div class="content">
+  
+</div>
