--- a/src/app/principal/login/login.component.html
+++ b/src/app/principal/login/login.component.html
@@ -14,9 +14,12 @@
             <input
               id="username"
               type="text"
-              class="form-control"
-              (ngModel)="username"
               placeholder="{{ constantes.lblUserName }}"
+              class="form-control"
+              name="username"
+              [(ngModel)]="username"
+              
+              
             />
           </div>
           <div class="input-group form-group">
@@ -26,9 +29,11 @@
             <input
               id="password"
               type="password"
-              class="form-control"
-              (ngModel)="password"
               placeholder="{{ constantes.lblPassword }}"
+              class="form-control"
+              name="password"
+              [(ngModel)]="password"
+              
             />
           </div>
           <div>
