Creado routerlink, para accedo a componentes dentro del menu.

--- a/src/app/m-menu/menu/menu.component.html
+++ b/src/app/m-menu/menu/menu.component.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="row">
-      <router-outlet name="popup"></router-outlet>
+      <router-outlet name="sitp"></router-outlet>
     </div>
 
     <div class="row">
@@ -89,8 +89,6 @@
           <b>Correo:</b> soportearch@controlhidrocarburos.gob.ec &nbsp;
           <b>Teléfono:</b>(593-2) 3996 500
         </p>
-        <a [routerLink]="[{ outlets: { popup: ['compose'] } }]">Contact</a>
-
       </div>
     </div>
   </div>
