--- a/src/app/m-trabajo-pozo/crear-portafolio/crear-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/crear-portafolio/crear-portafolio.component.html
@@ -1,46 +1,12 @@
 <p-fieldset legend="Creación portafoilo trabajo en Pozo" [toggleable]="true">
   <div class="row">
     <div class="col-md-12">
-      <p class="float-right">
-        <b>Fecha registro:&nbsp;&nbsp;</b> 03/03/2019 <br />
-        <b>Funcionario:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b> Edwin Landeta
-      </p>
+      <p class="float-right"><b>Fecha registro:&nbsp;&nbsp;</b> 03/03/2019</p>
     </div>
   </div>
   <hr />
+
   <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Número portafolio:</b></label>
-        </div>
-        <div class="col-md">
-          <p class="mtop">0001</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Bloque:*</b></label>
-        </div>
-        <div class="col-md">
-          <p class="mtop">060</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Pozo:*</b></label>
-        </div>
-        <div class="col-md">
-          <p-dropdown></p-dropdown>
-        </div>
-      </div>
-    </div>
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
@@ -51,18 +17,41 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="row">
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
-          <label for="campo"><b>Tipo pozo:*</b></label>
+          <label for="campo"><b>Pozo:*</b></label>
         </div>
         <div class="col-md">
           <p-dropdown></p-dropdown>
         </div>
       </div>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <label for="campo"><b>Bloque:*</b></label>
+        </div>
+        <div class="col-md">
+          <p class="mtop">060</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <label for="campo"><b>Tipo pozo:*</b></label>
+        </div>
+        <div class="col-md">
+          <p class="mtop">Tipo pozo</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
@@ -73,8 +62,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="row">
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
@@ -85,6 +72,8 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="row">
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
@@ -95,8 +84,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="row">
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
@@ -107,6 +94,8 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="row">
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
