--- a/src/app/m-login/login/login.component.html
+++ b/src/app/m-login/login/login.component.html
@@ -17,11 +17,7 @@
       <h1><b>Módulo de trabajos en pozo v1.0.0</b></h1>
     </div>
     <div class="col-md-6">
-      <img
-        class="float-right"
-        src="../../../assets/img/logo-siscohi.PNG"
-        alt=""
-      />
+      <img class="float-right" src="../../../assets/img/logo-siscohi.PNG" alt="" />
     </div>
   </div>
 
@@ -32,15 +28,7 @@
           <label for="campo">Usuario:</label>
         </div>
         <div class="col-md-6">
-          <input
-            id="username"
-            name="username"
-            
-            type="text"
-            [(ngModel)]="username"
-            pInputText
-            required
-          />
+          <input id="username" name="username" type="text" [(ngModel)]="usuario.usuarioLogin" pInputText required />
         </div>
       </div>
 
@@ -49,15 +37,7 @@
           <label for="campo">Clave:</label>
         </div>
         <div class="col-md-6">
-          <input
-            id="password"
-            name="password"
-            
-            type="text"
-            [(ngModel)]="password"
-            pInputText
-            required
-          />
+          <input id="password" name="password" type="password" [(ngModel)]="usuario.password" pInputText required />
         </div>
       </div>
 
@@ -88,8 +68,5 @@
 </div>
 
 <ng-template #customLoadingTemplate> </ng-template>
-<ngx-loading
-  [show]="loading"
-  [config]="{ backdropBorderRadius: '3px' }"
-  [template]="customLoadingTemplate"
-></ngx-loading>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
+</ngx-loading>
