Creacion de portafolio

--- a/src/app/m-menu/menu/menu.component.html
+++ b/src/app/m-menu/menu/menu.component.html
@@ -52,7 +52,7 @@
         <div class="row">
           <div class="col-md-12">
             <p class="float-right">
-              <b>Bienvenido: </b> Edwin Landeta &nbsp; 1722077649 <br />
+              <b>Bienvenido: </b> {{userNom}} &nbsp; {{userCI}} <br />
             </p>
           </div>
         </div>
