--- a/src/app/m-menu/menu/menu.component.html
+++ b/src/app/m-menu/menu/menu.component.html
@@ -24,19 +24,11 @@
   <p class="separator-tittle"></p>
   <div class="row sidebar-tittle">
     <div class="col-md-6">
-      <img
-        src="../../../assets/img/video.png"
-        style="width: 40%; align-content: center"
-        alt=""
-      />
+      <img src="../../../assets/img/video.png" style="width: 40%; align-content: center" alt="" />
       <p>Video Tutorial</p>
     </div>
     <div class="col-md-6">
-      <img
-        src="../../../assets/img/pdf.png"
-        style="width: 40%;align-content: center"
-        alt=""
-      />
+      <img src="../../../assets/img/pdf.png" style="width: 40%;align-content: center" alt="" />
       <p>Manual de usuario PDF</p>
     </div>
   </div>
@@ -59,14 +51,10 @@
         <div class="row">
           <div class="col-md-12">
             <p class="float-right">
-              <a href="">Cerrar session</a>
-              &nbsp; &nbsp;<a href="www.twitter.com" target="_blank"
-                ><i class="fa fa-twitter"></i></a
-              >&nbsp; &nbsp;<a href="www.facebook.com" target="_blank"
-                ><i class="fa fa-facebook"></i></a
-              >&nbsp; &nbsp;<a href="www.youtube.com" target="_blank"
-                ><i class="fa fa-youtube"></i
-              ></a>
+              <a (click)="closeSession()">Cerrar session</a>
+              &nbsp; &nbsp;<a href="www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp; &nbsp;<a
+                href="www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>&nbsp; &nbsp;<a
+                href="www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
             </p>
           </div>
         </div>
