Asignacion persona por campo

--- a/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
@@ -13,7 +13,7 @@
           <label for="campo"><b>Campo:*</b></label>
         </div>
         <div class="col-md">
-          <p-dropdown [options]="campoList" [(ngModel)]="campo" (onChange)="cargarCampoPozo(campo);"></p-dropdown>
+          <p-dropdown [options]="campoList" [(ngModel)]="campo" placeholder="Hola" (onChange)="cargarCampoPozo(campo);"></p-dropdown>
         </div>
       </div>
     </div>
