--- a/src/app/m-trabajo-bitacora/componentes/buscar-portafolio/buscar-portafolio.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/buscar-portafolio/buscar-portafolio.component.html
@@ -104,7 +104,7 @@
             <td>{{portafolio.numeroTrabajo}}</td>
             <td>{{portafolio.fechaRegistro | date:'dd/MM/yyyy'}}</td>
             <td class="text-center">
-              <i class="fa fa-pencil-square-o fa-2x" (click)="editarPortafolio(portafolio);"></i>
+              <i class="fa fa-pencil-square-o fa-2x" ></i>
             </td>
 
           </tr>
