Editar portafolio, agrandar espacio de trabajo

--- a/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
@@ -104,7 +104,11 @@
             <td>{{portafolio.numeroTrabajo}}</td>
             <td>{{portafolio.fechaRegistro | date:'dd/MM/yyyy'}}</td>
             <td class="text-center">
-              <i class="fa fa-pencil-square-o fa-2x" (click)="editarPortafolio(portafolio);"></i>
+              <span class="badge badge-primary">Editar</span>
+              <span class="badge badge-primary">Editar</span>
+              <span class="badge badge-primary">Editar</span>
+              <span class="badge badge-primary">Editar</span>
+              <span class="badge badge-primary">Editar</span>
             </td>
 
           </tr>
