--- a/src/app/m-menu/menu/menu.component.html
+++ b/src/app/m-menu/menu/menu.component.html
@@ -35,7 +35,7 @@
 </div>
 
 <div class="content">
-  <div class="container" style="margin-top: 1%;">
+  <div class="container-fluid" style="margin-top: 1%;">
     <div class="row">
       <div class="col-md-6">
         <img src="../../../assets/img/logo-siscohi.PNG" style="width: 50%;" />
