--- a/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
@@ -1,5 +1,20 @@
 <p-fieldset legend="Busqueda de portafolio trabajo en Pozo" [toggleable]="true">
 
+  <div class="row justify-content-end">
+    <div class="col-md-2">
+      <button type="button" class="btn btn-sm btn-primary btn-block" (click)="buscarPortafolio()">
+        Buscar
+      </button>
+    </div>
+    <div class="col-md-2">
+      <button type="button" class="btn btn-sm btn-success btn-block" (click)="crearPortafolio()">
+        Nuevo Portafolio
+      </button>
+    </div>
+  </div>
+
+  <hr>
+
   <div class="row">
     <div class="col-md-6">
       <div class="row">
@@ -14,14 +29,14 @@
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
-          <label for="campo"><b>Pozo:</b></label>
+          <label for="campo"><b>Funcionario:</b></label>
         </div>
         <div class="col-md">
-          <input [(ngModel)]="busquedaParametros.pozo" pInputText />
-
+          <input [(ngModel)]="busquedaParametros.funcionario" pInputText />
         </div>
       </div>
     </div>
+
   </div>
   <div class="row">
     <div class="col-md-6">
@@ -55,23 +70,29 @@
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
-          <label for="campo"><b>Funcionario:</b></label>
+          <label for="campo"><b>Campo:*</b></label>
         </div>
         <div class="col-md">
-          <input [(ngModel)]="busquedaParametros.funcionario" pInputText />
+          <p-dropdown [options]="campoList" [(ngModel)]="campo" (onChange)="cargarPozosByCamCodigo(campo);"
+            [filter]="true">
+          </p-dropdown>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <label for="campo"><b>Pozo:*</b></label>
+        </div>
+        <div class="col-md">
+          <p-dropdown [options]="pozoList" [(ngModel)]="pozo" [filter]="true">
+          </p-dropdown>
         </div>
       </div>
     </div>
 
-  </div>
-  <div class="row justify-content-end">
-    <div class="col-md-4">
-      <button type="button" class="button" (click)="buscarPortafolio()">
-        Buscar
-      </button>
-    </div>
-  </div>
 
+  </div>
 </p-fieldset>
 <hr>
 
@@ -89,9 +110,6 @@
         <li>
           <i class="fa fa-paperclip " aria-hidden="true"> Adjuntar documentos</i>
         </li>
-      </ul>
-      <ul class="nav justify-content-end">
-
         <li>
           <i class="fa fa-file-pdf-o " aria-hidden="true"> Registrar Doc Ministerio</i>
         </li>
@@ -135,10 +153,10 @@
                 <div class="col-md-12">
                   <ul class="nav">
                     <li (click)="editarPortafolio(portafolio)">
-                      <i class="fa fa-pencil fa-2x" aria-hidden="true"></i>
+                      <i class="fa fa-pencil fa-2x"></i>
                     </li>
-                    <li>
-                      <i class="fa fa-calendar-check-o fa-2x" aria-hidden="true"></i>
+                    <li (click)="goToRegistroDiario(portafolio)">
+                      <i class="fa fa-calendar-check-o fa-2x"></i>
                     </li>
                     <li>
                       <i class="fa fa-paperclip fa-2x" aria-hidden="true"></i>
