--- a/src/app/m-trabajo-pozo/componentes/crear-portafolio/crear-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/crear-portafolio/crear-portafolio.component.html
@@ -1,10 +1,25 @@
 <p-fieldset legend="Creación portafoilo trabajo en Pozo" [toggleable]="true">
+
+  <div class="row justify-content-end">
+    <div class="col-md-2 ">
+      <button type="button" class="btn btn-sm btn-success btn-block" (click)="guardarPortafolio()">
+        Guardar
+      </button>
+    </div>
+    <div class="col-md-2">
+      <button type="button" class="btn btn-sm btn-danger btn-block" (click)="goToBuscarPortafolio()">
+        Cancelar
+      </button>
+    </div>
+  </div>
+
+  <hr />
   <div class="row">
     <div class="col-md-12">
       <p class="float-right"><b>Fecha registro:&nbsp;&nbsp;</b> {{today | date:'dd/MM/yyyy'}}</p>
     </div>
   </div>
-  <hr />
+
 
   <div class="row">
     <div class="col-md-6">
@@ -13,7 +28,8 @@
           <label for="campo"><b>Campo:*</b></label>
         </div>
         <div class="col-md">
-          <p-dropdown [options]="campoList" [(ngModel)]="campo" (onChange)="cargarCampoPozo(campo);"></p-dropdown>
+          <p-dropdown [options]="campoList" [filter]="true" [(ngModel)]="campo" (onChange)="cargarCampoPozo(campo);">
+          </p-dropdown>
         </div>
       </div>
     </div>
@@ -23,7 +39,8 @@
           <label for="campo"><b>Pozo:*</b></label>
         </div>
         <div class="col-md">
-          <p-dropdown [options]="pozoList" [(ngModel)]="pozo" (onChange)="cargarOperadoraByPozCompaniaPetrolera(pozo);">
+          <p-dropdown [options]="pozoList" [(ngModel)]="pozo" (onChange)="cargarOperadoraByPozCompaniaPetrolera(pozo);"
+            [filter]="true">
           </p-dropdown>
         </div>
       </div>
@@ -92,7 +109,7 @@
           <label for="campo"><b>Numero:</b></label>
         </div>
         <div class="col-md">
-          <p-dropdown [options]="numeroList"></p-dropdown>
+          <p-dropdown [options]="numeroList" [(ngModel)]="numeroTrabajo"></p-dropdown>
         </div>
       </div>
     </div>
@@ -104,20 +121,13 @@
           <label for="campo"><b>Fecha trabajo sin torre:</b></label>
         </div>
         <div class="col-md">
-          <p-calendar [style]="{ width: '100%' }" [minDate]="minDate" [maxDate]="maxDate" [inputStyle]="{ width: '100%' }"
-            [(ngModel)]="portafolio.fechaTrabajoSinTorre"></p-calendar>
+          <p-calendar [style]="{ width: '100%' }" [minDate]="minDate" [maxDate]="maxDate"
+            [inputStyle]="{ width: '100%' }" [(ngModel)]="portafolio.fechaTrabajoSinTorre"></p-calendar>
         </div>
       </div>
     </div>
   </div>
-  <hr />
-  <div class="row justify-content-end">
-    <div class="col-md-4">
-      <button type="button" class="button" (click)="guardarPortafolio()">
-        Guardar
-      </button>
-    </div>
-  </div>
+
 </p-fieldset>
 <ng-template #customLoadingTemplate> </ng-template>
 <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
