--- a/src/app/m-trabajo-pozo/componentes/registro-trabajo-diario/registro-trabajo-diario.component.css
+++ b/src/app/m-trabajo-pozo/componentes/registro-trabajo-diario/registro-trabajo-diario.component.css
@@ -4,34 +4,44 @@
     background-color: rgba(0, 0, 0, 0.03);
     border-bottom: 1px solid rgba(0, 0, 0, 0.125);
     height: 30px;
-}
-
-input{
+  }
+  
+  input {
     height: 20px;
     width: 100%;
     margin-top: 4px;
     font-size: 12px;
-}
-
-p{
+  }
+  
+  p {
     font-size: 12px;
-}
-label{
+  }
+  label {
     font-size: 12px;
-}
-
-body .ui-dropdown .ui-dropdown-label {
+  }
+  
+  body .ui-dropdown .ui-dropdown-label {
     padding-right: 2em;
     height: 20px;
-}
-
-.mtop{
-    margin-top: 4px; 
-}
-
-.button {
-
+  }
+  
+  .mtop {
+    margin-top: 4px;
+  }
+  
+  .button {
+    background-color: white;
+    color: var(--sitp-color);
+    border: 2px solid var(--sitp-color);
     font-size: 12px;
     border-radius: 5px;
     width: 100%;
   }
+  
+  td {
+    font-size: 12px;
+  }
+  th {
+    font-size: 12px;
+  }
+  
